--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                     <a href="https://localhost:7105/Home/Index" class="nav-link">首頁</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Login">登入</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Logout">登出</a>
                 </li>
             </ul>
@@ -107,6 +110,29 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-wheelchair"></i>
                                 <p>
+                                    會員中心
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Patient" asp-action="List">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>會員資料</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="OffService" asp-action="List">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>借書紀錄</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-wheelchair"></i>
+                                <p>
                                     借書系統
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
@@ -117,13 +143,7 @@
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>書籍查詢</p>
                                     </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="OffService" asp-action="List">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>借書紀錄</p>
-                                    </a>
-                                </li>                            
+                                </li>                           
                             </ul>
                         </li>
                     </ul>
